--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portfolio",
+  "name": "personal-portfolio-page",
   "homepage": "https://github.com/manuel12/personal-portfolio-page/",
   "version": "0.1.0",
   "private": true,
