Updated homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio-page",
-  "homepage": "https://github.com/manuel12/personal-portfolio-page/",
+  "homepage": "https://manuel12.github.io/personal-portfolio-page/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
